# uncertainty_from_proper_scoring_rules

./: .gitignore  README.md  joint_tables.ipynb  mis_analysis.ipynb  mis_visualizations.ipynb  ood_analysis.ipynb  ood_visualizations.ipynb  pyproject.toml  remove_extra_models.sh  requirements.txt  separate_dataset_stats.ipynb  test_cifar10c.py
external_repos/laplace_approximation/: main.py  pyproject.toml
external_repos/laplace_approximation/datasets/: constants.py  loaders.py  transforms.py
external_repos/laplace_approximation/losses/: constants.py  losses.py
external_repos/laplace_approximation/models/: __init__.py  load_models.py  vgg.py
notebooks/: [REBUTTAL] Error bars ood.ipynb  analyse_logits.ipynb  if_coinciding_beneficial.ipynb  joint_tables.ipynb  mis_analysis.ipynb  new_models_joint_tables.ipynb  numerucal_validation.ipynb  ood_analysis.ipynb  ood_visualizations.ipynb  predictions_calibrations.ipynb  separate_dataset_stats.ipynb
pretrained_models/: main.py  (+4 more)
prsuq/: pyproject.toml
prsuq/notebooks/: ood_visualizations.ipynb
prsuq/prsuq/: data_utils.py  evaluation_utils.py  postprocessing_utils.py  table_utils.py
prsuq/tests/: test_loss.py
psruq/: README.md  pyproject.toml
psruq/datasets/: __init__.py  constants.py  datasets.py  loaders.py  transforms.py
psruq/experiments/cifar10/: main.py
psruq/experiments/laplace/: README.md  main.py  sample_logits.py
psruq/experiments/laplace/results/: experiment.pth
psruq/losses/: __init__.py  losses.py
psruq/metrics/: __init__.py  central_predictions.py  create_specific_risks.py  getters.py
psruq/models/: __init__.py  constants.py  load_models.py
psruq/notebook/: reliability_diagrams.py
psruq/notebooks/: [REBUTTAL] Error bars misclassif.ipynb  [REBUTTAL] Error bars ood.ipynb  [REBUTTAL] excess_better_than_bayes.ipynb  [REBUTTAL] information-theoretical measures.ipynb  joint_tables.ipynb  mis_analysis.ipynb  mis_visualizations.ipynb  notebook_test.py  numerucal_validation.ipynb  ood_analysis.ipynb  ood_visualizations.ipynb  predictions_calibrations.ipynb  reliability_diagrams.py  separate_dataset_stats.ipynb
psruq/psruq/datasets/: __init__.py  constants.py
psruq/psruq/losses/: __init__.py
psruq/psruq/models/: constants.py  resnet.py
psruq/psruq/source/: evaluation_utils.py  losses.py  postprocessing_utils.py  uncertainty_scores.py
psruq/scripts/: copy_files.sh
psruq/source/: data_utils.py  evaluation_utils.py  extract_logits.py  path_utils.py  postprocessing_utils.py  table_utils.py
psruq/source/datasets/: __init__.py  constants.py  datasets.py  loaders.py  transforms.py
psruq/source/losses/: __init__.py  constants.py  losses.py
psruq/source/metrics/: __init__.py  central_predictions.py  check.py  constants.py  create_specific_risks.py  g_primitives.py  getters.py  risk_primitives.py  utils.py
psruq/source/models/: __init__.py  constants.py  load_models.py  resnet.py  vgg.py
psruq/source/notebook/: reliability_diagrams.py
psruq/source/source/: data_utils.py  evaluation_utils.py  losses.py  path_config.py  postprocessing_utils.py  table_utils.py  uncertainty_scores.py  vectorizer_uncertainty_scores.py
psruq/source/utils/: __init__.py  general_utils.py  vector_utils.py
psruq/tests/: check.py  test_loss.py
psruq/utils/: __init__.py
(+119 files in other folders)
