[tool.poetry]
name = "proper-scoring-rules-uncertainty-quantification"
version = "0.1.0"
description = "Proper scoring rules uncertainty quantification"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "source" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
torch = "^2.4.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
scipy = "^1.14.1"
laplace-torch = { version = "^0.2.1", optional = true }

[tool.poetry.extras]
laplace = ['laplace-torch']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
